<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/rollcall_item_txv_studentName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_student_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/rollcall_item_txv_studentNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_student_number"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/rollcall_item_txv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2015-01-05"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/rollcall_item_txv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12:17"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <TextView
            android:id="@+id/rollcall_item_txv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_rollcall_status"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>