<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="296.0dip"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_dlg_background"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8.0dip"
        android:paddingTop="12.0dip" >

        <TextView
            android:id="@+id/wheel_view_txv_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="选择"
            android:textColor="@color/dlg_title"
            android:textSize="16.0sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/wheel_view_rlyt_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/wheel_view_llyt_wheels"
            android:layout_width="fill_parent"
            android:layout_height="158.0dip"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="4.0dip"
            android:paddingTop="4.0dip" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignBottom="@id/wheel_view_llyt_wheels"
            android:layout_alignTop="@id/wheel_view_llyt_wheels" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_picker_bar" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_dlg_title_shadow"
            android:contentDescription="@string/app_name_en" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="14.0dip"
        android:paddingLeft="16.0dip"
        android:paddingRight="16.0dip"
        android:paddingTop="14.0dip" >

        <Button
            android:id="@+id/wheel_view_btn_cancel"
            android:layout_width="116.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_dlg_grey_selector"
            android:text="@string/general_cancle"
            android:textColor="@color/dlg_button_text"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/dlg_txv_btnDivider"
            android:layout_width="16.0dip"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/wheel_view_btn_submit"
            android:layout_width="116.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_dlg_blue_selector"
            android:text="@string/general_confirm"
            android:textColor="@color/white"
            android:textSize="16.0sp" />
    </LinearLayout>

</LinearLayout>