<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/rlyt_title_menu"
    android:layout_width="fill_parent"
    android:layout_height="48.0dip"
    android:background="@drawable/ic_title_background"
    android:clickable="true" >

    <ImageButton
        android:id="@id/title_imgbtn_left"
        android:layout_width="46.0dip"
        android:layout_height="32.0dip"
        android:layout_centerVertical="true"
        android:layout_marginLeft="6.0dip"
        android:background="@drawable/btn_title_back_selector"
        android:contentDescription="@string/app_name_en" />

    <TextView
        android:id="@id/title_txv_left_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/title_imgbtn_left"
        android:layout_alignLeft="@id/title_imgbtn_left"
        android:layout_alignRight="@id/title_imgbtn_left"
        android:layout_alignTop="@id/title_imgbtn_left"
        android:gravity="center"
        android:maxWidth="50.0dip"
        android:paddingLeft="8.0dip"
        android:shadowColor="@color/title_btn_text_shadow"
        android:shadowDx="0.0"
        android:shadowDy="-1.0"
        android:shadowRadius="1.0"
        android:singleLine="true"
        android:text="@string/general_exit"
        android:textColor="@color/title_btn_text"
        android:textSize="12.0sp"
        android:visibility="visible" />

    <TextView
        android:id="@id/title_txv_menu_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36.0dip"
        android:layout_marginTop="2.0dip"
        android:background="@drawable/ic_tips_big"
        android:gravity="center"
        android:paddingLeft="8.0dip"
        android:paddingRight="8.0dip"
        android:textColor="@color/white"
        android:textSize="12.0sp"
        android:visibility="gone" />

    <ImageButton
        android:id="@id/title_imgbtn_right"
        android:layout_width="44.0dip"
        android:layout_height="32.0dip"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="6.0dip"
        android:background="@drawable/btn_title_confirm_selector"
        android:contentDescription="@string/app_name_en"
        android:padding="6.0dip"
        android:visibility="invisible" />

    <ImageView
        android:id="@id/title_imgv_right_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/title_imgbtn_right"
        android:layout_alignLeft="@id/title_imgbtn_right"
        android:layout_alignRight="@id/title_imgbtn_right"
        android:layout_alignTop="@id/title_imgbtn_right"
        android:scaleType="centerInside"
        android:visibility="gone" />

    <TextView
        android:id="@id/title_txv_right_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/title_imgbtn_right"
        android:layout_alignLeft="@id/title_imgbtn_right"
        android:layout_alignRight="@id/title_imgbtn_right"
        android:layout_alignTop="@id/title_imgbtn_right"
        android:gravity="center"
        android:maxWidth="64.0dip"
        android:padding="6.0dip"
        android:shadowColor="@color/title_btn_text_shadow"
        android:shadowDx="0.0"
        android:shadowDy="-1.0"
        android:shadowRadius="1.0"
        android:singleLine="true"
        android:text="@string/general_confirm"
        android:textColor="@color/title_btn_text"
        android:textSize="12.0sp"
        android:visibility="gone" />

    <TextView
        android:id="@id/title_txv_right_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="2.0dip"
        android:layout_marginTop="2.0dip"
        android:background="@drawable/ic_tips_mid"
        android:gravity="center"
        android:paddingBottom="4.0dip"
        android:paddingLeft="8.0dip"
        android:paddingRight="8.0dip"
        android:paddingTop="4.0dip"
        android:textColor="@color/white"
        android:textSize="12.0sp"
        android:visibility="invisible" />

    <ImageView
        android:id="@id/title_imgv_right_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="2.0dip"
        android:layout_marginTop="2.0dip"
        android:src="@drawable/ic_tips_little"
        android:visibility="gone" />

    <LinearLayout
        android:id="@id/title_llyt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/title_text_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="4.0dip"
        android:paddingLeft="8.0dip"
        android:paddingRight="8.0dip"
        android:paddingTop="4.0dip" >

        <TextView
            android:id="@id/title_txv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="0.0"
            android:shadowDy="-1.0"
            android:shadowRadius="1.0"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18.0sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4.0dip"
            android:src="@drawable/ic_title_week_set_icon" />
    </LinearLayout>

</RelativeLayout>